include(GNUInstallDirs)
set(PROJECT_PUBLIC_HEADER_DIR "${PROJECT_SOURCE_DIR}/include")

add_subdirectory(core)

add_library(${PROJECT_NAME} INTERFACE)

set_target_properties(
  ${PROJECT_NAME}
  PROPERTIES
    PUBLIC_HEADER
    "${PROJECT_PUBLIC_HEADER_DIR}/${PROJECT_NAME_LOWERCASE}/shanhai.hpp")

install(
  TARGETS ${PROJECT_NAME}
  EXPORT ${PROJECT_NAME_UPPERCASE}
  PUBLIC_HEADER DESTINATION DESTINATION
                "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME_LOWERCASE}")
